--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ecom-client",
+    "name": "Threads",
     "slug": "ecom-client",
     "version": "1.0.0",
     "orientation": "portrait",
