--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.15",
+    "@expo-google-fonts/nunito": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
     "expo": "~39.0.2",
     "expo-cli": "^4.4.3",
+    "expo-font": "~8.3.0",
     "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.2.1",
